# vibestreamer

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  resources.qrc
.github/workflows/: build.yml
aur/: .SRCINFO  PKGBUILD  vibestreamer-1.3.3-1-x86_64.pkg.tar.zst
aur/pkg/vibestreamer/: .BUILDINFO  .MTREE  .PKGINFO
aur/src/vibestreamer-1.3.3/: BUILD.md  CMakeLists.txt  resources.qrc
aur/src/vibestreamer-1.3.3/.github/: FUNDING.yml
aur/src/vibestreamer-1.3.3/flatpak/: io.github.krmmyvz.Vibestreamer.desktop
aur/src/vibestreamer-1.3.3/src/core/: config.cpp  config.h  devstats.cpp  models.h
aur/src/vibestreamer-1.3.3/src/media/: mpvwidget.cpp  mpvwidget.h
aur/src/vibestreamer-1.3.3/src/network/: imagecache.h
aur/src/vibestreamer-1.3.3/src/parser/: epgmanager.cpp  m3uparser.cpp
aur/src/vibestreamer-1.3.3/src/ui/: fuzzyproxymodel.h  mainwindow.cpp  mainwindow_multiview.cpp  mainwindow_setup.cpp  mainwindow_theme.cpp
aur/src/vibestreamer-1.3.3/src/ui/dialogs/: settingsdialog.cpp  sourcedialog.cpp
aur/src/vibestreamer-1.3.3/src/ui/styles/: theme.h
aur/src/vibestreamer-1.3.3/src/ui/widgets/: channeldelegate.h
aur/src/vibestreamer-1.3.3/translations/: de.json  it.json
aur/vibestreamer-bin/: PKGBUILD
flatpak/: io.github.krmmyvz.Vibestreamer.metainfo.xml  io.github.krmmyvz.Vibestreamer.yml
src/: config.cpp  config.h  epgmanager.cpp  epgmanager.h  icons.h  imagecache.cpp  imagecache.h  localization.h  m3uparser.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mpvwidget.cpp  mpvwidget.h  multiviewdialog.cpp  multiviewdialog.h  multiviewwidget.h  settingsdialog.cpp  settingsdialog.h  sourcedialog.cpp  sourcedialog.h  theme.h  xtreamclient.cpp
src/core/: config.cpp  config.h  devstats.h  sleepinhibitor.cpp  sleepinhibitor.h
src/i18n/: localization.h
src/media/: mpvwidget.cpp
src/network/: imagecache.cpp  xtreamclient.h
src/parser/: epgmanager.cpp  epgmanager.h  m3uparser.h
src/ui/: fuzzyproxymodel.h  mainwindow.cpp  mainwindow.h  mainwindow_controls.cpp  mainwindow_epg.cpp  mainwindow_multiview.cpp  mainwindow_navigation.cpp  mainwindow_pip.cpp  mainwindow_recording.cpp  mainwindow_setup.cpp
src/ui/dialogs/: multiviewdialog.cpp  settingsdialog.h
src/ui/widgets/: multiviewwidget.cpp
translations/: ar.json  en.json  fr.json  pt.json  tr.json
